<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            />


        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_corner_radius="@dimen/_12sdp"

                />

            <TextView
                android:id="@+id/addImageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Profile Image"
                android:layout_gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>

        </FrameLayout>

        <EditText
            android:id="@+id/SignUpNameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_18sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/primary"
            android:paddingStart="@dimen/_15ssp"
            android:paddingEnd="@dimen/_15ssp"

            />

        <EditText
            android:id="@+id/signUpEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_18sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/primary"
            android:paddingStart="@dimen/_15ssp"
            android:paddingEnd="@dimen/_15ssp"

            />

        <EditText
            android:id="@+id/signUpPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/primary"
            android:paddingStart="@dimen/_15ssp"
            android:paddingEnd="@dimen/_15ssp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/signUpConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/primary"
            android:paddingStart="@dimen/_15ssp"
            android:paddingEnd="@dimen/_15ssp"
            android:inputType="textPassword"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:animateLayoutChanges="true"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                />

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

        </FrameLayout>



        <TextView
            android:id="@+id/signUpSignInText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_in_2"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>